--- a/van-der-gooer.html
+++ b/van-der-gooer.html
@@ -1,6 +1,6 @@
 <head>
   <!-- Plotly.js -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="./lib/plotly-latest.min.js"></script>
 </head>
 
 <body>
