--- a/van-der-gooer.html
+++ b/van-der-gooer.html
@@ -1,11 +1,13 @@
 <head>
-  <!-- Plotly.js -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- Plotly.js -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
-  
-  <div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
-  
-  <script src="van-der-gooer.js"></script>
+
+    <div id="myDiv" style="width: 680px; height: 600px;">
+        <!-- Plotly chart will be drawn inside this DIV -->
+    </div>
+
+
 </body>
